# cuda-programming

./: CMakeLists.txt  README.md
include/: test.h
src/: main.cpp  test.cu
